--- a/CRANE_X7_JS/package.json
+++ b/CRANE_X7_JS/package.json
@@ -6,8 +6,10 @@
   "dependencies": {
     "async": "^2.6.1",
     "express": "^4.16.4",
+    "jquery": "^3.4.1",
     "serialport": "^7.0.2",
-    "socket.io": "^2.1.1"
+    "socket.io": "^2.2.0",
+    "three": "^0.106.2"
   },
   "devDependencies": {},
   "scripts": {
